tests/paczka1/fuzzy1/99508098.err
Error in line 8: blpdZT S893 96,0
Error in line 21: A579 S700 57,1
Error in line 15: blpdZT S700 61,3
Error in line 34: A579 A579 95,6
